src/objects/Apttus_Config2__OrderLineItemLimitFields__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__LimitFieldNames2__c</fullName>
        <description>Enter the list of field API names from the order line item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the order line item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Limit Field Names 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LimitFieldNames3__c</fullName>
        <description>Enter the list of field API names from the order line item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the order line item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Limit Field Names 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LimitFieldNames4__c</fullName>
        <description>Enter the list of field API names from the order line item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the list of field API names from the orderline item object used in limit processing in incentive pricing. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Limit Field Names 4</label>
        <type>TextArea</type>
    </fields>
</CustomObject>